# benchmarks

./: .gitignore  CMD_WISHLIST.md  README.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  testing.ipynb  usage_examples.ipynb
.github/workflows/: build-conda-recipe.yaml  pipy-pyblish.yaml
conda-recipe/: meta.yaml
docs/: abx17.md  abxLS.md  tde17.md
examples/: __init__.py  python_experiments.ipynb  testing.ipynb  usage_examples.ipynb  zerospeech  zr_testing.ipynb
examples/benchmark_examples/: abx17.ipynb  abxLS.ipynb  prosAudit.ipynb  sLM21.ipynb  tde17.ipynb
zerospeech/: __init__.py  __main__.py  api_client.py  auth.py  checkpoints.py  data_items.py  data_loaders.py  datasets.py  httpw.py  info_cmd.py  meta_file.py  misc.py  networkio.py  out.py  repository.py  samples.py  settings.py  startup.py  validators.py
zerospeech/benchmarks/: __init__.py  _model.py  abx17.py  abxLS.py  generic.py  misc.py  prosAudit.py  sLM21.py  tde17.py
zerospeech/benchmarks/_benchmarks/abx_17/: __init__.py  benchmark.py  data_model.py
zerospeech/benchmarks/_benchmarks/abx_LS/: __init__.py  benchmark.py  data_model.py  instructions.md  leaderboard.py  params.py  scores.py  validators.py
zerospeech/benchmarks/_benchmarks/abx_LS_phoneme/: __init__.py  benchmark.py  data_model.py  instructions.md  validators.py
zerospeech/benchmarks/_benchmarks/pros_audit/: __init__.py  benchmark.py  leaderboard.py  submission.py
zerospeech/benchmarks/_benchmarks/sLM_21/: __init__.py  benchmark.py  leaderboard.py  scores.py  submission.py  validators.py
zerospeech/benchmarks/_benchmarks/sLM_prosody/: __init__.py  benchmark.py  submission.py
zerospeech/benchmarks/_benchmarks/tde_17/: __init__.py  benchmark.py  data_model.py  leaderboard.py  params.py
zerospeech/benchmarks/abx_15/: leaderboard.py
zerospeech/benchmarks/abx_17/: leaderboard.py
zerospeech/benchmarks/abx_LS/: __init__.py  benchmark.py  data.py  data_model.py  dataset.py  leaderboard.py  params.py  scores.py  validators.py
zerospeech/benchmarks/datasets/: __init__.py  zrc_2015.py  zrc_2017.py  zrc_2019.py  zrc_2021.py
zerospeech/benchmarks/sLM_21/: __init__.py  benchmark.py  data.py  data_model.py  dataset.py  instructions.md  leaderboard.py  lexical.py  params.py  scores.py  semantic.py  submission.py  syntactic.py  validators.py
zerospeech/benchmarks/tasks/: tde.py  tts019.py
zerospeech/benchmarks/tasks/abx/: __init__.py
zerospeech/benchmarks/tasks/abx/abx_librispeech/: params.py  task.py
zerospeech/benchmarks/tasks/abx/abx_phoneme/: params.py  task.py
zerospeech/benchmarks/tasks/abx_librispech/: __init__.py  params.py  task.py
zerospeech/benchmarks/tasks/abx_phoneme/: __init__.py  params.py  task.py
zerospeech/benchmarks/tasks/lm/: __init__.py  lexical.py  params.py  prosody.py  semantic.py  syntactic.py
zerospeech/benchmarks/tde_15/: leaderboard.py
zerospeech/benchmarks/tde_17/: benchmark.py  data_model.py  leaderboard.py  params.py
zerospeech/benchmarks/validation/: __init__.py  generics.py  validators.py
zerospeech/cmd/: __init__.py  benchmarks.py  checkpoints.py  cli_lib.py  datasets.py  generic.py  leaderboard.py  samples.py  submission.py  submit.py  user.py
zerospeech/datasets/: __init__.py  _model.py  zrc_2015.py  zrc_2017.py  zrc_2019.py  zrc_2021.py
zerospeech/generics/: __init__.py  checkpoints.py  data_items.py  named_storage.py  repository.py  samples.py
zerospeech/leaderboards/: __init__.py  _models.py  _types.py  abx17.py  abxLS.py  prosaudit.py  sLM21.py  tde17.py  utils.py  vocolab_ext.py
zerospeech/leaderboards/benchmarks/: __init__.py  abxLS.py  prosaudit.py  sLM21.py  tde17.py
zerospeech/leaderboards/exporters/: __init__.py  abxLS.py  base.py  sLM21.py  tde17.py
zerospeech/model/: __init__.py  benchmark.py  checkpoints.py  data_items.py  datasets.py  leaderboard.py  meta_file.py  repository.py  samples.py  score_dir.py  validation_context.py
zerospeech/model/leaderboards/: abc.py  abx.py  sLM21.py  tde.py  tts0.py
zerospeech/submissions/: __init__.py  abx17.py  abxLS.py  prosAudit.py  sLM21.py  tde17.py
zerospeech/submissions/_model/: __init__.py  meta_file.py  score_dir.py  submission.py  validation_context.py
zerospeech/tasks/: __init__.py  _model.py  tde.py
zerospeech/tasks/abx/abx17/: params.py  task.py
zerospeech/tasks/abx/abxLS_phoneme/: params.py  task.py
zerospeech/tasks/abx/abx_librispeech/: params.py  task.py
zerospeech/tasks/abx/abx_phoneme/: __init__.py  task.py
zerospeech/tasks/lm/: lexical.py  params.py  prosody.py  semantic.py  syntactic.py
zerospeech/upload/: __init__.py  api_lib.py  auth.py  file_split.py  requests_w.py  submission.py  user_api.py
zerospeech/validation/: meta_file.py
zerospeech/validators/: __init__.py  base_validators.py  validators.py
