[project]
name = "zerospeech-benchmark"

description = "Toolset for usage of the Zero Resource Challenge Benchmarks."
authors = [
    {name = "Nicolas Hamilakis", email="nicolas.hamilakis@ens.psl.eu"},
    {name = "CoML Team", email = "dev@zerospeech.com"}
]
license = {file = "LICENSE.txt"}
requires-python = ">=3.8"
keywords = [
    "speech", "machine-learning", "challenges",
    "research-tool", "benchmark-speech", "zerospeech"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research"
]
dynamic = ["dependencies", "version", "readme"]

[project.urls]
documentation = "https://zerospeech.com/toolbox/"
homepage = "https://zerospeech.com/"
repository = "https://github.com/zerospeech/benchmarks"

[project.scripts]
zrc = "zerospeech.startup:main"

[project.optional-dependencies]
abx = [
    "libriabx @ git+https://github.com/zerospeech/libri-light-abx.git",
    "virtual-dataset"
]
tde = [
    "tde @ git+https://github.com/zerospeech/tdev2.git@master"
]

all = [
    "libriabx @ git+https://github.com/zerospeech/libri-light-abx.git",
    "virtual-dataset",
    "tde @ git+https://github.com/zerospeech/tdev2.git@master"
]

dev = [
    "libriabx @ git+https://github.com/zerospeech/libri-light-abx.git",
    "virtual-dataset",
    "tde @ git+https://github.com/zerospeech/tdev2.git@master",
    "ipython",
    "jupyter",
    "pytest"
]



[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
readme = {file = "README.md"}

[tool.setuptools.packages.find]
where = ["."]
include = ["zerospeech*"]
exclude = ["examples*", "tests*"]


[tool.setuptools_scm]