[project]
name = "zerospeech-benchmarks"
readme = "README.md"
description = "Toolset for usage of the Zero Resource Challenge Benchmarks."
authors = [
    {name = "Nicolas Hamilakis", email="nicolas.hamilakis@ens.psl.eu"},
    {name = "CoML Team", email = "dev@zerospeech.com"}
]
license = {file = "LICENSE.txt"}
requires-python = ">=3.8"
keywords = [
    "speech", "machine-learning", "challenges",
    "research-tool", "benchmark-speech", "zerospeech"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research"
]
dynamic = ["dependencies", "version"]

[project.urls]
documentation = "https://zerospeech.com/toolbox/"
homepage = "https://zerospeech.com/"
repository = "https://github.com/zerospeech/benchmarks"

[project.scripts]
zrc = "zerospeech.startup:main"

[project.optional-dependencies]
abx = [
    "zerospeech-libriabx>=1.0.5"
]
abx2 = [
    "zerospeech-libriabx2>=0.9.7",
    "virtual-dataset"
]
tde = [
    "zerospeech-tde>=2.0.2"
]

all = [
    "zerospeech-benchmarks[abx,tde,abx2]"
]

dev = [
   "zerospeech-benchmarks[abx,tde]",
    "ipython",
    "jupyter",
    "pytest",
    "twine",
    "build"
]



[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["zerospeech*"]
exclude = ["examples*", "tests*"]


[tool.setuptools_scm]