[project]
name = "zerospeech-benchmarks"
readme = "README.md"
description = "Toolset for usage of the Zero Resource Challenge Benchmarks."
authors = [
    { name = "Nicolas Hamilakis", email = "nicolas.hamilakis@ens.psl.eu" },
    { name = "CoML Team", email = "dev@zerospeech.com" }
]
license = { file = "LICENSE.txt" }
requires-python = ">=3.8"
keywords = [
    "speech", "machine-learning", "challenges",
    "research-tool", "benchmark-speech", "zerospeech"
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research"
]
dynamic = ["dependencies", "version"]

[project.urls]
documentation = "https://zerospeech.com/toolbox/"
homepage = "https://zerospeech.com/"
repository = "https://github.com/zerospeech/benchmarks"

[project.scripts]
zrc = "zerospeech.startup:main"
abxLS-csv = "zerospeech.leaderboards.exporters.abxLS:cmd"
sLM21-csv = "zerospeech.leaderboards.exporters.sLM21:cmd"
tde17-csv = "zerospeech.leaderboards.exporters.tde17:cmd"


[project.entry-points.'vocolab_ext.leaderboards']
zrc_leaderboards = "zerospeech.leaderboards.vocolab_ext:VocolabLeaderboardManager"


[project.optional-dependencies]
vocolab = [
    # todo migrate towards normal install when package is published
    "vocolab-extensions @ git+https://github.com/zerospeech/vocolab-ext.git#egg=vocolab_ext"
]

tts019 = [
    # todo migrate towards pypi url once module is public
    "tts019-evaluator @ https://github.com/zerospeech/tts019-evaluator/archive/master.zip"
]

abx = [
    "zerospeech-libriabx>=1.0.5"
]
abx2 = [
    "zerospeech-libriabx2>=0.9.7",
    "virtual-dataset"
]
tde = [
    "zerospeech-tde>=2.0.3"
]

all = [
    # TDE
    "zerospeech-tde>=2.0.3",
    # ABX2
    "zerospeech-libriabx2>=0.9.8",
    "virtual-dataset",
    #
]

dev = [
    "ipython",
    "jupyter",
    "pytest",
    "twine",
    "build"
]

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["."]
include = ["zerospeech*"]
exclude = ["examples*", "tests*"]


[tool.setuptools_scm]